[tool.poetry]
name = "oceanesia-be"
version = "0.1.0"
description = "app for better life below water"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
Flask-SQLAlchemy = "^3.1.1"
flask-smorest = "^0.44.0"
python-dotenv = "^1.0.1"
Flask-JWT-Extended = "^4.6.0"
passlib = "^1.7.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
